# blackwall-protocol

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  commands_definition.py  main.py  pyproject.toml  security.md
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  security-issues.md
.github/workflows/: labeler.yml  python-publish.yml  ruff-action.yml
src/: API.py  API_dataset.py  API_group.py  API_resource.py  API_traits_base.py  API_user.py  UI.css  UI.tcss  commands.py  commands_definition.py  main.py  panel_user.py  theme.py
src/API/: API_dataset.py  API_group.py  API_resource.py  API_user.py
src/blackwall/: UI.css  app.py  audit_mode.py  command_line.py  commands.py  main.py  messages.py  modals.py  notifications.py  panel_analysis.py  panel_search.py  panel_user.py  search.py  secret_scrubber.py  settings.py  submit_command.py  system_info.py  tabs.py  theme_3270.py
src/blackwall/api/: dataset.py  group.py  keyrings.py  permit.py  resource.py  rrsf.py  setropts.py  traits_base.py  user.py
src/blackwall/panels/: confirmation_modal.py  modals.py  search.py  traits_ui.py
src/blackwall/panels/analysis/: analysis.py
src/blackwall/panels/backout/: backout.py
src/blackwall/panels/command_output/: command_output.py
src/blackwall/panels/copy/: copy.py
src/blackwall/panels/dataset/: dataset.py
src/blackwall/panels/errors/: history.py
src/blackwall/panels/group/: group.py
src/blackwall/panels/history/: history.py
src/blackwall/panels/keyrings/: keyrings.py
src/blackwall/panels/permits/: permits.py  resource_permit.py
src/blackwall/panels/resource/: resource.py
src/blackwall/panels/rrsf/: rrsf.py
src/blackwall/panels/search/: results.py  search.py  search_backend.py
src/blackwall/panels/setropts/: setropts.py
src/blackwall/panels/users/: generator.py  user.py
src/blackwall/panels/welcome/: welcome.py  welcome_message.md
src/blackwall/screens/command_output/: command_output.py
src/blackwall/screens/history/: command_output.py  history.py
src/blackwall/screens/modal/: confirmation.py  modal.py  refresh.py  rvary.py  warning.py
src/blackwall/screens/refresh/: refresh.py
src/blackwall/screens/warning/: warning.py
src/blackwall/state/: group.py
src/blackwall/themes/: theme_3270.py  theme_blackwall.py
