[project]
name = "blackwall"
description = "Blackwall Protocol for mainframe security administration"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
  "racfu",
  "textual>=3.1.0",
]
authors = [
  {name = "Emma Skovgaard"},
  {name = "Karoline Halberg Rasmussen"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["RACF", "security", "mainframe", "zos", "TUI"]

[project.optional-dependencies]
images = [
  "qrcode>=8.1",
  "textual-image>=0.8.2",
]

[project.scripts]
blackwall = "blackwall.main:main"

[project.urls]
Repository = "https://github.com/EmmasBox/blackwall-protocol"
Source = "https://github.com/EmmasBox/blackwall-protocol"
Issues = "https://github.com/EmmasBox/blackwall-protocol/issues"
Pypi = "https://pypi.org/project/blackwall/"

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm >= 8.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.package-data]
blackwall = ["*.css", "*.tcss", "*.md"]