[project]
name = "blackwall"
description = "Blackwall Protocol for mainframe security administration"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
  "racfu==1.0a1",
  "textual>=3.1.1",
]
authors = [
  {name = "Emma Skovgaard"},
  {name = "Karoline Halberg Rasmussen"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["RACF", "security", "mainframe", "zos", "TUI", "RACFu", "ESM"]

classifiers = [    
  #Application audience and type
  "Topic :: Security",
  "Intended Audience :: System Administrators",

  #Status
  "Development Status :: 3 - Alpha",

  #Application environment
  "Environment :: Console",
  "Operating System :: POSIX",
  "Topic :: System :: Hardware :: Mainframes",

  #Supported python versions
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

  "Typing :: Typed",
]

[project.optional-dependencies]
images = [
  "qrcode>=8.1",
  "textual-image>=0.8.2",
]

[project.scripts]
blackwall = "blackwall.main:main"

[project.urls]
Repository = "https://github.com/EmmasBox/blackwall-protocol"
Source = "https://github.com/EmmasBox/blackwall-protocol"
Issues = "https://github.com/EmmasBox/blackwall-protocol/issues"
Pypi = "https://pypi.org/project/blackwall/"
Documentation = "https://emmasbox.github.io/blackwall-protocol-docs/"

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm >= 8.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.package-data]
blackwall = ["*.css", "*.tcss", "*.md", "*.png"]

[tool.bandit]
exclude_dirs = [".github", ".git"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
]

[tool.ruff.lint]
select = [
  "E", 
  "F", 
  "B", 
  "EM", 
  "SIM", #Comes with suggestions on simplifying things
  "PTH", #Must use pathlib instead of os
  "N",  #Checks if code conforms to the PEP8 naming conventions
  "PLE", 
  "UP", 
  "TRY", 
  "FLY", #Checks for string joins
  "I",  #Comes with suggestions on organizing imports
  "COM", #Checks for missing commas and unnecessary 
  "A", 
  "C4",
  "YTT",
  "ASYNC",
  ]

# Avoid enforcing dumb rules
ignore = ["E501","B024"]